# KiraFramework

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
crates/framework/: Cargo.toml
crates/framework/locales/: en-US.yml  zh-CN.yml
crates/framework/src/: async_manager.rs  configs.rs  lib.rs  lib_plugin.rs  macros.rs  persistent.rs  pretty_debug.rs  recv.rs  utils.rs
crates/framework/src/network/: message_chain.rs  mod.rs
crates/framework/src/network/actions/: mod.rs
crates/framework/src/network/connect/: mod.rs  reverse.rs
crates/framework/src/network/events/: mod.rs
crates/framework_proc/: Cargo.toml
crates/framework_proc/src/: lib.rs
crates/kira_qqbot/: Cargo.toml
crates/kira_qqbot/locales/: en-US.yml  zh-CN.yml
crates/kira_qqbot/src/: connect.rs  lib.rs  macros.rs  messages.rs
crates/kira_qqbot/src/api/: anonymous.rs  file.rs  mod.rs  sender.rs
crates/kira_qqbot/src/api/action/: mod.rs  ret.rs
crates/kira_qqbot/src/api/event/: message.rs  meta.rs  mod.rs  notice.rs  request.rs
examples/: event_example.rs  qqbot.rs
