[package]
name = "kira_framework"
version = "0.2.2"
edition = "2021"
license = "Apache-2.0"
description = "An implementation of OneBot 11 based on the ECS architecture."
repository = "https://github.com/YouZiSoftware/KiraFramework"
homepage = "https://github.com/YouZiSoftware/KiraFramework"
readme = "../../README.md"
keywords = ["OneBot", "Kira", "Bot", "Framework", "QQ"]

[features]
default = []

[dependencies]
tokio-tungstenite = "0.23.1"
bevy_ecs = "0.14.0"
bevy_app = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-inline-default = "0.2.0"
flume = "0.11.0"
tokio = {  version = "1.38.0", features = ["full"] }
anyhow = "1.0.86"
uuid = { version = "1.10.0", features = ["v4"] }
chrono = "0.4.38"
async-trait = "0.1.81"
log = "0.4.22"
futures-util = "0.3.30"
futures-channel = "0.3.30"
url = "2.5.2"
rust-i18n = "3"
bevy-async-ecs = "0.6"
libloading = "0.8.4"