[package]
name = "kira_qqbot"
version = "0.2.5"
edition = "2021"
license = "Apache-2.0"
description = "KiraFramework proc macro"
repository = "https://github.com/YouZiSoftware/KiraFramework"
homepage = "https://github.com/YouZiSoftware/KiraFramework"
readme = "../../README.md"
keywords = ["OneBot", "Kira", "Bot", "Framework", "QQ"]

[dependencies]
flume = { version =  "0.11.0", features = ["async"] }
bevy_ecs = "0.14"
bevy_app = "0.14"
bevy-async-ecs = "0.5.1"
kira_framework = { path = "../framework", version = "0.2.0" }
kira_framework_proc = { path = "../framework_proc", version = "0.2.0" }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
anyhow = "1.0.86"
tokio = "1.38.0"
log = "0.4.22"
rust-i18n = "3"